feat: complete work experience section overhaul
- Implement glass morphism modal design
- Add 3D card hover animations
- Fix all React warnings and deprecated methods
- Enhance responsive design for mobile
- Improve performance and accessibility

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-	"name": "reactfolio",
-	"version": "1.1.0",
+	"name": "profile-website",
+	"version": "1.0.0",
 	"description": "Personal portfolio template built using Reactjs",
 	"author": {
-		"name": "Tharindu N. Madhusanka",
-		"email": "mail@tharindu.dev",
-		"url": "https://tharindu.dev"
+		"name": "Bayu Saputra",
+		"email": "bayusaputra.005.003@gmail.com",
+		"url": "https://next-it.my.id"
 	},
 	"license": "MIT",
 	"private": true,
@@ -22,6 +22,7 @@
 		"react-dom": "^18.2.0",
 		"react-ga4": "^2.1.0",
 		"react-helmet": "^6.1.0",
+		"react-helmet-async": "^2.0.5",
 		"react-router-dom": "^6.11.1",
 		"react-scripts": "^0.0.0",
 		"styled-components": "^5.3.10",
