--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "bayu5aputra-portfolio",
 	"version": "1.0.0",
+	"homepage": "https://next-it.my.id",
 	"description": "Modern & Interactive Personal Portfolio - Showcasing IT Infrastructure Expertise, Network Administration, and Full-Stack Development Projects with React",
 	"author": {
 		"name": "Bayu5aputra",
