--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
 		"react-helmet-async": "^2.0.5",
 		"react-router-dom": "^6.11.1",
 		"react-scripts": "^0.0.0",
+		"react-snap": "^1.23.0",
 		"styled-components": "^5.3.10",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
 		"start": "react-scripts start",
 		"build": "react-scripts build",
+		"postbuild": "react-snap",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
 	},
@@ -50,5 +52,34 @@
 	"prettier": {
 		"useTabs": true,
 		"tabWidth": 4
+	},
+	"reactSnap": {
+		"inlineCss": true,
+		"minifyHtml": {
+			"collapseWhitespace": false,
+			"removeComments": false
+		},
+		"puppeteerArgs": [
+			"--no-sandbox",
+			"--disable-setuid-sandbox"
+		],
+		"include": [
+			"/",
+			"/about",
+			"/projects",
+			"/articles",
+			"/contact",
+			"/article/1",
+			"/article/2",
+			"/article/3",
+			"/article/4",
+			"/article/5",
+			"/article/6"
+		]
+	},
+	"eslintConfig": {
+		"extends": [
+			"react-app"
+		]
 	}
 }
