--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
 		"react-helmet": "^6.1.0",
 		"react-helmet-async": "^2.0.5",
 		"react-router-dom": "^6.11.1",
-		"react-scripts": "^0.0.0",
+		"react-scripts": "5.0.1",
 		"styled-components": "^5.3.10",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
+		"preinstall": "npx npm-force-resolutions",
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
@@ -50,5 +51,18 @@
 	"prettier": {
 		"useTabs": true,
 		"tabWidth": 4
+	},
+	"resolutions": {
+		"webpack-dev-server": "^4.15.1",
+		"nth-check": "^2.1.1",
+		"postcss": "^8.4.31"
+	},
+	"overrides": {
+		"webpack-dev-server": "^4.15.1",
+		"nth-check": "^2.1.1",
+		"postcss": "^8.4.31"
+	},
+	"devDependencies": {
+		"npm-force-resolutions": "^0.0.10"
 	}
 }
