--- a/package.json
+++ b/package.json
@@ -13,25 +13,22 @@
 	"dependencies": {
 		"@fortawesome/fontawesome-svg-core": "^6.4.0",
 		"@fortawesome/free-brands-svg-icons": "^6.4.0",
-		"@fortawesome/free-regular-svg-icons": "^6.4.0",
 		"@fortawesome/free-solid-svg-icons": "^6.4.0",
 		"@fortawesome/react-fontawesome": "^0.2.0",
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
-		"firebase": "^12.7.0",
+		"firebase": "^10.14.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-ga4": "^2.1.0",
-		"react-helmet": "^6.1.0",
 		"react-helmet-async": "^2.0.5",
-		"react-router-dom": "^6.11.1",
+		"react-router-dom": "^6.20.0",
 		"react-scripts": "5.0.1",
 		"styled-components": "^5.3.10",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
-		"preinstall": "npx npm-force-resolutions",
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
@@ -53,17 +50,9 @@
 		"useTabs": true,
 		"tabWidth": 4
 	},
-	"resolutions": {
-		"webpack-dev-server": "^4.15.1",
-		"nth-check": "^2.1.1",
-		"postcss": "^8.4.31"
-	},
-	"overrides": {
-		"webpack-dev-server": "^4.15.1",
-		"nth-check": "^2.1.1",
-		"postcss": "^8.4.31"
-	},
 	"devDependencies": {
-		"npm-force-resolutions": "^0.0.10"
+		"@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+		"html-webpack-plugin": "^5.5.3",
+		"lodash": "^4.17.21"
 	}
 }
